<resources>
    <!-- activity titles -->
    <string name="app_name">Pocket Garden</string>
    <string name="journal_click">Opening Journal…</string>
    <string name="title_activity_view_journals">View Journals</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="my_dashboard">My Dashboard</string>

    <!--tile titles -->
    <string name="basics">Basics</string>
    <string name="library">Library</string>
    <string name="insert_navigation_bar">[Insert Navigation Bar]</string>
    <string name="todo">TODO</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Descriptions -->
    <string name="plant_description">plant image for dashboard</string>
    <string name="shovel_description">Shovel picture used in dashboard</string>
    <string name="my_plants">My Plants</string>
    <string name="sun_description">Sun for weather</string>
    <string name="weather">Weather</string>
    <string name="watering_can_description">Watering can image</string>
    <string name="plant_care">Plant Care</string>
    <string name="journal">Journal</string>
    <string name="camera_description">Camera picture for library menu</string>
    <string name="journal_description">Pencil for journal picture</string>
    <string name="journal_title">Edit Journal Entries</string>
    <string name="nav_bar">[Insert Navigation Bar]</string>
    <string name="make_message">Send Notification</string>
    <string name="prompt">How often do you want to receive notifications for watering your plants?</string>
    <string name="never">Never</string>
    <string name="daily">Every 1 day</string>
    <string name="e_2_d">Every 2 days</string>
    <string name="e_3_d">Every 3 days</string>
    <string name="e_4_d">Every 4 days</string>
    <string name="e_5_d">Every 5 days</string>
    <string name="e_6_d">Every 6 days</string>
    <string name="weekly">Every 7 days</string>
    <string name="save">Save</string>
    <string name="make">Create notification</string>
    <string name="trefle_token">token=ALt0fE6yO8mIuJKrReIYktfe6eC5GDbuHTUt4zGhMS4</string>
    <string name="trefle_api_url">https://trefle.io/api/v1/</string>
    <string name="title_activity_plant">plant</string>
    <string name="title_activity_make_plant">make_plant</string>
    <string name="title_activity_plant_listing">plant_listing</string>
    <string name="title">title</string>
    <string name="let_s_get_back_to_the_basics">Let\'s Get Back to the Basics</string>
    <string name="every_3_days">Every 3 days</string>
    <string name="every_6_days">Every 6 days</string>
    <string name="every_7_days">Every 7 days</string>
    <string name="every_5_days">Every 5 days</string>
    <string name="every_day">Every day</string>
    <string name="every_2_days">Every 2 days</string>
    <string name="every_4_days">Every 4 days</string>
    <string name="test_output">Test output</string>
    <string name="indoor">Indoor</string>
    <string name="potted">Potted</string>
    <string name="input_plant_info">Input the information for your new plant. Whole numbers only. Once you\'re done click submit to test your creation.</string>
    <string name="plant_name_notification">Plant Name:</string>
    <string name="plant_age">Plant Age:</string>
    <string name="watering_interval">Watering Interval:</string>
    <string name="submit_button">submit button</string>
    <string name="potted_msg">This plant has been potted.</string>
    <string name="not_potted_msg">This plant is not potted.</string>
    <string name="outdoor_plant_msg">This is a outdoor plant.</string>
    <string name="Indoor_plant_msg">This is a indoor plant.</string>
    <string name="add_new_note">add new note</string>
    <string name="add_new">Button to add new note</string>
    <string name="plant_photo_description">picture of plant pulled from Trefle API</string>
    <string name="plant_name">Plant Name</string>
    <string name="age">Age</string>
    <string name="interval">Interval</string>
    <string name="new_plant_button">New Plant</string>
    <string name="new_note">New note</string>
    <string name="sample">Sample Text</string>

</resources>