<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#77c567"
    tools:context=".MakePlant">

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/submit_button"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="127dp" />

    <EditText
        android:id="@+id/plantName"
        android:layout_width="154dp"
        android:layout_height="40dp"
        android:layout_marginTop="179dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="512dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/plantAge"
        android:layout_width="154dp"
        android:layout_height="40dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plantName" />


    <EditText
        android:id="@+id/wateringInt"
        android:layout_width="154dp"
        android:layout_height="40dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plantAge" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="249dp"
        android:layout_height="97dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="52dp"
        android:text="@string/test_output"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/potted" />

    <CheckBox
        android:id="@+id/indoorcheck"
        android:layout_width="76dp"
        android:layout_height="29dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="21dp"
        android:text="@string/indoor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wateringInt" />

    <CheckBox
        android:id="@+id/potted"
        android:layout_width="74dp"
        android:layout_height="28dp"
        android:layout_marginStart="128dp"
        android:text="@string/potted"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/indoorcheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="227dp"
        android:layout_height="68dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="45dp"
        android:text="@string/input_plant_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="90dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="179dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="513dp"
        android:gravity="center"
        android:text="@string/plant_name_notification"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/plantName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="91dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/plant_age"
        app:layout_constraintEnd_toStartOf="@+id/plantAge"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="89dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:text="@string/watering_interval"
        app:layout_constraintEnd_toStartOf="@+id/wateringInt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>